<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E0E0E0"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/keyboard"
        android:scaleType="centerCrop"
        android:src="@drawable/singleapp1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:fontFamily="sans-serif"
        android:padding="10dp"
        android:text="@string/Android_Apps_Trainer"
        android:textColor="@android:color/black"
        android:textSize="32sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:fontFamily="sans-serif"
        android:padding="10dp"
        android:text="@string/loc"
        android:textColor="@android:color/black"
        android:textSize="14sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:fontFamily="sans-serif"
        android:padding="10dp"
        android:text="@string/city"
        android:textColor="@android:color/black"
        android:textSize="14sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:fontFamily="sans-serif"
        android:padding="10dp"
        android:text="@string/tel"
        android:textColor="@android:color/black"
        android:textSize="14sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:fontFamily="sans-serif"
        android:padding="10dp"
        android:text="@string/web"
        android:textColor="@android:color/black"
        android:textSize="14sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:fontFamily="sans-serif"
        android:padding="10dp"
        android:text="@string/office_hours"
        android:textColor="@android:color/black"
        android:textSize="14sp" />

</LinearLayout>
